manifests/audiobookshelf/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: audiobookshelf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /audiobooks
              subPath: audiobooks
            - name: media
              mountPath: /podcasts
              subPath: podcasts
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 2Gi
          startupProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: media
          persistentVolumeClaim:
            claimName: media
