manifests/audiobookshelf/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: audiobookshelf
  ports:
    - name: http
      port: 80
      targetPort: http
