manifests/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  rules:
    - host: books.seymour.family
      http:
        paths:
          - backend:
              service:
                name: audiobookshelf
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - books.seymour.family
      secretName: audiobookshelf-tls
